nginx add ssl settings

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -40,4 +40,16 @@ http {
             try_files $uri $uri/ /index.html =404;
         }
     }
+  
+  
+    server {
+        listen 443;
+        ssl on;
+        ssl_certificate /etc/nginx/certs/server.crt;
+        ssl_certificate_key /etc/nginx/certs/server.key;
+
+        location / {
+          proxy_pass http://172.21.0.1:8000;
+        }
+    }
 }
